fix: create jobs endpoint
