# internal/models/jobpost.go
@@ -1,31 +1,14 @@
 package models
 
 import (
+	"reflect"
 	"time"
+
 	"github.com/gin-gonic/gin"
 	"github.com/hngprojects/hng_boilerplate_golang_web/pkg/repository/storage/postgresql"
+	"github.com/hngprojects/hng_boilerplate_golang_web/utility"
 	"gorm.io/gorm"
 )
-
-
-// type JobPost struct {
-// 	ID                 	string     `gorm:"type:uuid; primaryKey" json:"id"`
-// 	Title              	string     `gorm:"column:title; type:varchar(255); not null" json:"title"`
-// 	Salary             	string     `gorm:"column:salary; type:varchar(255)" json:"salary"`
-// 	JobType            	string     `gorm:"column:job_type; type:varchar(50); not null" json:"job_type"`
-// 	WorkMode           	string     `gorm:"column:work_mode; type:varchar(50); not null" json:"work_mode"`
-// 	Deadline           	time.Time  `gorm:"column:deadline; not null" json:"deadline"` 
-// 	Location           	string     `gorm:"column:location; type:varchar(255); not null" json:"location"`
-// 	HowToApply         	string     `gorm:"column:how_to_apply; type:varchar(500)" json:"how_to_apply"`
-// 	Experience         	string     `gorm:"column:experience; type:varchar(50); not null" json:"experience"`
-// 	JobBenefits        	string     `gorm:"column:job_benefits; type:varchar(500)" json:"job_benefits"`
-// 	CompanyName        	string     `gorm:"column:company_name; type:varchar(255); not null" json:"company_name"`
-// 	Description        	string     `gorm:"column:description; type:varchar(500); not null" json:"description"`
-// 	KeyResponsibilities string     `gorm:"column:key_responsibilities; type:varchar(500)" json:"key_responsibilities"`
-// 	Qualifications		string	   `gorm:"column:qualifications; type:varchar(500)" json:"qualifications"`
-// 	CreatedAt          	time.Time  `gorm:"column:created_at; not null; autoCreateTime" json:"created_at"`
-// 	UpdatedAt          	time.Time  `gorm:"column:updated_at; null; autoUpdateTime" json:"updated_at"`
-// }
 
 type JobPost struct {
 	ID                 	string     `gorm:"type:uuid; primaryKey" json:"id"`
@@ -35,28 +18,15 @@ type JobPost struct {
 	Location            string     `gorm:"column:location; type:varchar(255); not null" json:"location"`
 	Deadline            time.Time  `gorm:"column:deadline; not null" json:"deadline"` 
 	JobMode             string     `gorm:"column:job_mode; type:varchar(50); not null" json:"job_mode"`
-	Experience          string     `gorm:"column:experience; type:varchar(50); not null" json:"experience"`
 	CompanyName         string     `gorm:"column:company_name; type:varchar(255); not null" json:"company_name"`
 	Description         string     `gorm:"column:description; type:varchar(500); not null" json:"description"`
+	Benefits        	string     `gorm:"column:benefits; type:varchar(500)" json:"benefits"`
+	ExperienceLevel     string     `gorm:"column:experience_level; type:varchar(50); not null" json:"experience_level"`
+	KeyResponsibilities string     `gorm:"column:key_responsibilities; type:varchar(500)" json:"key_responsibilities"`
+	Qualifications		string	   `gorm:"column:qualifications; type:varchar(500)" json:"qualifications"`
 	CreatedAt          	time.Time  `gorm:"column:created_at; not null; autoCreateTime" json:"created_at"`
     UpdatedAt          	time.Time  `gorm:"column:updated_at; null; autoUpdateTime" json:"updated_at"`
 }
-
-// type CreateJobPostModel struct {
-// 	Title               string     `json:"title" validate:"required,min=2,max=255"`
-// 	Salary              string     `json:"salary" validate:"required"`
-// 	JobType             string     `json:"job_type" validate:"required"`
-// 	Location            string     `json:"location" validate:"required,min=2,max=255"`
-// 	Deadline            time.Time  `json:"deadline" validate:"required"`
-// 	WorkMode            string     `json:"work_mode" validate:"required"`
-// 	Experience          string     `json:"experience" validate:"required"`
-// 	HowToApply          string     `json:"how_to_apply" validate:"required"`
-// 	JobBenefits         string     `json:"job_benefits" validate:"required,min=2,max=500"`
-// 	CompanyName         string     `json:"company_name" validate:"required,min=2,max=255"`
-// 	Description         string     `json:"description" validate:"required,min=2,max=500"`
-// 	KeyResponsibilities string     `json:"key_responsibilities" validate:"required,min=2,max=500"`
-// 	Qualifications		string	   `json:"qualifications" validate:"required,min=2,max=500"`
-// }
 
 type CreateJobPostModel struct {
 	Title               string     `json:"title" validate:"required,min=2,max=255"`
@@ -65,9 +35,24 @@ type CreateJobPostModel struct {
 	Location            string     `json:"location" validate:"required,min=2,max=255"`
 	Deadline            time.Time  `json:"deadline" validate:"required"`
 	JobMode             string     `json:"job_mode" validate:"required"`
-	Experience          string     `json:"experience" validate:"required"`
+	Benefits            string     `json:"benefits" validate:"required,min=2,max=500"`
 	CompanyName         string     `json:"company_name" validate:"required,min=2,max=255"`
 	Description         string     `json:"description" validate:"required,min=2,max=500"`
+	ExperienceLevel     string     `json:"experience_level" validate:"required,min=2,max=500"`
+	KeyResponsibilities string     `json:"key_responsibilities" validate:"required,min=2,max=500"`
+	Qualifications		string	   `json:"qualifications" validate:"required,min=2,max=500"`
+}
+
+func (m *CreateJobPostModel) Sanitize() {
+	v := reflect.ValueOf(m).Elem()
+
+	for i := 0; i < v.NumField(); i++ {
+		field := v.Field(i)
+		if field.Kind() == reflect.String {
+			cleanedValue := utility.CleanStringInput(field.String())
+			field.SetString(cleanedValue)
+		}
+	}
 }
 
 func (j *JobPost) CreateJobPost(db *gorm.DB) error {
